--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
 @import "tailwindcss";
+
+
+:root {
+  --font-poppins: 'Poppins', sans-serif;
+  --font-nunito: 'Nunito', sans-serif;
+}
+
+.poppins {
+  font-family: var(--font-poppins);
+}
+
+.nunito {
+  font-family: var(--font-nunito);
+}
+
+
+
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary:#f50e00;
+  --secondary:#002537;
 }
 
 @theme inline {
@@ -24,3 +44,37 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.text-primary{
+  color:var(--primary)
+}
+.text-secondary{
+  color:var(--secondary)
+}
+.bg-primary{
+  background:var(--primary)
+}
+.bg-secondary{
+  background:var(--secondary)
+}
+.border-primary{
+  border-color: var(--primary);
+}
+.border-secondary{
+  border-color: var(--secondary);
+}
+
+.hover-primary:hover{
+  color:var(--primary)
+}
+.hover-secondary:hover{
+  color:var(--secondary)
+}
+
+.mySwiper {
+  padding-bottom: 50px; 
+}
+
+/* .swiper-pagination {
+  bottom: 10px !important;
+} */
