--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,12 @@ body {
 .border-secondary{
   border-color: var(--secondary);
 }
+.hover-bg-secondary:hover{
+  background: var(--secondary);
+}
+.hover-bg-primary:hover{
+  background: var(--primary);
+}
 
 .hover-primary:hover{
   color:var(--primary)
